# CostNav

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ros  Dockerfile.ros_torch  Dockerfile.vint  FOOD_DELIVERY_BUSINESS.md  Makefile  README.md  docker-compose.yml  experiment_logs.txt  fastdds.xml  isaaclab_envs.txt  mkdocs.yml  pyproject.toml  train.sbatch
.devcontainer/: devcontainer.json  docker-compose.override.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: README.md  download_assets.py  download_assets_hf.py  download_assets_omniverse.py  download_omniverse_assets.py  update_asset_paths.py  upload_assets_hf.py
costnav/: main.py
costnav_isaaclab/: ISAACLAB_TEMPLATE.md  README.md
costnav_isaaclab_deprecated/: README.md
costnav_isaacsim/: Isaac_Houndbot_End.usda  README.md  TELEPORTATION_TIMING_FIX.md  launch.py  launch_mission.py  people_manager.py  rmp_drive.usda  rmp_drive_for_coco.usda
costnav_isaacsim/canvas/: .gitignore  README.md  pyproject.toml
costnav_isaacsim/canvas/apps/agent/: .env.pub  docker-compose.yml
costnav_isaacsim/canvas/apps/agent/config/: config.yml  segway_e1.yml
costnav_isaacsim/canvas/apps/agent/maps/: sidewalk.yaml
costnav_isaacsim/canvas/apps/model_workers/: .env.pub  docker-compose.yml  model_worker.sbatch
costnav_isaacsim/canvas/docker/: Dockerfile  build.sh
costnav_isaacsim/canvas/src/canvas/agent/cmd_vel_publisher/: __init__.py  cmd_vel_publisher.py  vel_data.py
costnav_isaacsim/canvas/src/canvas/agent/neural_planner/: __init__.py  distance.py  image_utils.py  neural_planner.py  ros_utils.py
costnav_isaacsim/canvas/src/canvas/agent/neural_planner/map/: __init__.py  sketch_map.py  trajectory_map_editor.py
costnav_isaacsim/canvas/src/canvas/agent/neural_planner/processor/: __init__.py  canvas_processor.py
costnav_isaacsim/canvas/src/canvas/agent/neural_planner/scenarios/: __init__.py  schema.py
costnav_isaacsim/canvas/src/canvas/agent/utils/: pointcloud2_utils.py
costnav_isaacsim/canvas/src/canvas/model_worker/: base_model.py  image_utils.py  internvl3.py  main.py
costnav_isaacsim/canvas/src/canvas/model_worker/action_tokenizer/: __init__.py  universal_action_processor.py
costnav_isaacsim/costnav_isaacsim/: README.md  TOPOMAP_PIPELINE.md  launch.py  pyproject.toml
costnav_isaacsim/costnav_isaacsim/config/: mission_config.yaml
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/: __init__.py  people_manager.py
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/config/: __init__.py  config_loader.py
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/evaluation/: food.py  injury.py  metrics.py  state.py
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/launcher/: __init__.py  extensions.py  sim_launcher.py
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/mission_manager/: __init__.py  canvas_instruction_generator.py  marker_publisher.py  mission_generator.py  mission_manager.py  mission_result_srv.py  navmesh_sampler.py  topomap_generator.py
costnav_isaacsim/costnav_isaacsim/src/costnav_isaacsim/utils/: __init__.py  args.py  config_cli.py  prim_utils.py  robot_config.py
costnav_isaacsim/costnav_isaacsim/tests/: __init__.py  test_config_loader.py  test_marker_publisher.py  test_mission_manager.py  test_navmesh_sampler.py
costnav_isaacsim/il_baselines/evaluation/: CMakeLists.txt  README.md  __init__.py  package.xml  pyproject.toml  setup.py
costnav_isaacsim/il_baselines/evaluation/agents/: __init__.py  base_agent.py  vint_agent.py
costnav_isaacsim/il_baselines/evaluation/configs/: robot_carter.yaml  vint_eval.yaml
costnav_isaacsim/il_baselines/evaluation/launch/: vint_policy.launch.py
costnav_isaacsim/il_baselines/evaluation/models/: __init__.py  base_model.py  traj_opt.py  vint_network.py
costnav_isaacsim/il_baselines/evaluation/nodes/: __init__.py  vint_policy_node.py
costnav_isaacsim/il_baselines/evaluation/src/evaluation/: __init__.py
costnav_isaacsim/il_baselines/evaluation/src/evaluation/agents/: __init__.py  base_agent.py  vint_agent.py
costnav_isaacsim/il_baselines/evaluation/src/evaluation/models/: base_model.py  traj_opt.py  vint_network.py
costnav_isaacsim/il_baselines/evaluation/src/evaluation/nodes/: __init__.py  trajectory_follower_node.py  vint_policy_node.py
costnav_isaacsim/il_training/: README.md  pyproject.toml
costnav_isaacsim/il_training/data_processing/configs/: navdp_processing_config.yaml  processing_config.yaml  vint_processing_config.yaml
costnav_isaacsim/il_training/data_processing/converters/: __init__.py  ray_batch_convert.py  rosbag_to_mediaref.py
costnav_isaacsim/il_training/data_processing/process_data/: process_mediaref_bags.py  process_mediaref_to_navdp.py
costnav_isaacsim/il_training/data_processing/tests/: test_process_mediaref_bags.py  test_rosbag_to_mediaref.py
costnav_isaacsim/il_training/scripts/: process_data.sbatch  setup.sh  train_gnm.sbatch  train_navdp.sbatch  train_navdp_internnav.sh  train_nomad.sbatch  train_vint.sbatch
costnav_isaacsim/il_training/tests/: test_process_mediaref_bags.py  test_ray_batch_convert.py
costnav_isaacsim/il_training/training/: train_navdp.py  train_vint.py
costnav_isaacsim/il_training/training/configs/: navdp_costnav.yaml
costnav_isaacsim/il_training/training/visualnav_transformer/configs/: gnm_costnav.yaml  nomad_costnav.yaml  vint_costnav.yaml
costnav_isaacsim/isaac_sim_teleop_ros2/: CMakeLists.txt  HOW_TO_SEE_UI.md  PORTING_NOTES.md  QUICKSTART.md  README.md  build_test.sh  package.xml  setup.py
costnav_isaacsim/isaac_sim_teleop_ros2/isaac_sim_teleop_ros2/: __init__.py  action_publisher.py  img_latency_manager.py  monitoring.py  robot.py  state.py
costnav_isaacsim/isaac_sim_teleop_ros2/launch/: teleop_isaac_sim.launch.py
costnav_isaacsim/isaac_sim_teleop_ros2/nodes/: isaac_sim_teleop_node  isaac_sim_teleop_node_ui
docker/: Dockerfile  Dockerfile.ros  docker-compose.yml  ros_entrypoint.sh
docs/: README.md  api.md  architecture.md  baselines.md  (+23 more)
(+269 files in other folders)
