[project]
name = "CostNav"
version = "0.1.0"
description = "A benchmark for navigation with cost estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["third_party", "costnav_isaaclab", "external"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]
