[project]
name = "canvas"
version = "1.0.0"
description = "Inference pipeline for Canvas autonomous robot navigation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=10.4.0",
    "pydantic==2.10.6",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "scipy>=1.14.0",
    "transformers==4.53.3",
    "tokenizers>=0.19.0",
    "rosbags>=0.10.4",
    "rosbags-image>=0.10.0",
    "fastapi[standard]==0.112.4",
    "requests>=2.32.0",
    "torch>=2.4.0",
    "sentencepiece>=0.2.0",
    "accelerate==1.9.0",
    "transforms3d==0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canvas"]
