[project]
name = "costnav_isaacsim"
version = "0.1.0"
description = "CostNav Isaac Sim Launcher - Simulation and Mission Management"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "CostNav Authors" },
]
keywords = ["robotics", "navigation", "isaac-sim", "simulation", "ros2"]

dependencies = [
    # Core dependencies - most come from Isaac Sim container
    "pyyaml>=6.0.0",
    "transforms3d>=0.4.2",
]

[project.urls]
Repository = "https://github.com/worv-ai/CostNav"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/costnav_isaacsim"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501"]
